--- a/app/templates/cryptify.html
+++ b/app/templates/cryptify.html
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="{% static 'img/user-research.gif' %}" class="img-fluid" alt="About Image">
+                    <img src="{% static '../img/user-research.gif' %}" class="img-fluid" alt="About Image">
                 </div>
                 <div class="col-md-6">
                     <h2>Why Choose Cryptify?</h2>
@@ -122,19 +122,22 @@
     </div>
     </section>
    
-    <footer>
+  <footer>
         <section style="color: white;background-color: rgb(53, 53, 53);" class="container-fluid">
             <div class="footer row container">
                 <p class="p-3">cryptify Crypto Buy</p>
-                <p class="p-3">Contact Us: contact@cryptifycrypto.com</p>
-                <p class="p-3">Follow Us: 
+                <p class="p-3">Contact Us: contact@cryptify.online@gmail.com</p>
+                <!--<p class="p-3">Follow Us: 
                     <a style="color: white;" href="#">Facebook</a> | 
                     <a style="color: white;" href="#">Twitter</a> | 
                     <a style="color: white;" href="#">Instagram</a>
-                </p>
+                </p>-->
             </div>
         </section>
       </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     
 </body>
 </html>
