--- a/app/templates/cryptify.html
+++ b/app/templates/cryptify.html
@@ -82,7 +82,7 @@
                  
                 </div>
                 <div class="col-md-6">
-                    <img src="{% static 'img/cryptify.png' %}" class="img-fluid" alt="About Image">
+                    <img src="https://i.ibb.co/J2HCg5x/User-research.gif" class="img-fluid" alt="About Image">
                 </div> 
                 
                 <div class="container">
