--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -95,7 +95,7 @@
             
             <div class="col-md-6"><br>
                 <div >
-                    <img class="img-fluid" src="{% static 'img/Crypto portfolio.gif' %}" autoplay loop muted alt="">
+                    <img class="img-fluid" src="https://i.ibb.co/BT6y8WB/Crypto-portfolio.gif" autoplay loop muted alt="">
                 </div>
             </div>
         </div>
@@ -107,7 +107,7 @@
         <div style="color: white;" class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="{% static 'img/user-research.gif' %}" class="img-fluid" alt="About Image">
+                    <img src="https://i.ibb.co/J2HCg5x/User-research.gif" class="img-fluid" alt="About Image">
                 </div>
                 <div class="col-md-6">
                     <br>
