--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -82,7 +82,7 @@
             <div class="col-md-6 "><br>
             <br>
                     <h1 style="font-size: 50px;">Welcome to cryptify</h1>
-                    <h4 class="text-center text-md-left">Faster, Better, Untrackable</h4>
+                    <h4 class="">Faster, Better, Untrackable</h4>
                 <br>
                 <div>
                     <input style="height: 50px;width:100%;background-color: transparent;color: white;"  type="email" name="" id="" placeholder="Enter your Email">
@@ -106,12 +106,13 @@
     <section>
         <div style="color: white;" class="container">
             <div class="row">
+                <h2>Why Choose Cryptify?</h2>
+                <br>
                 <div class="col-md-6">
                     <img src="https://i.ibb.co/J2HCg5x/User-research.gif" class="img-fluid" alt="About Image">
                 </div>
                 <div class="col-md-6">
                     <br>
-                    <h2>Why Choose Cryptify?</h2>
                     <ul>
                         <li><strong>User-Friendly Interface:</strong> Our platform is designed with simplicity in mind, ensuring that even beginners can navigate the world of cryptocurrency without any hassle.</li>
                         <li><strong>Secure Transactions:</strong> We prioritize your security, employing state-of-the-art encryption and security protocols to protect your assets and personal information.</li>
