--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -106,7 +106,8 @@
     <section>
         <div style="color: white;" class="container">
             <div class="row">
-                <h2>Why Choose Cryptify?</h2>
+                <br>
+                <h2 class="container">Why Choose Cryptify?</h2>
                 <br>
                 <div class="col-md-6">
                     <img src="https://i.ibb.co/J2HCg5x/User-research.gif" class="img-fluid" alt="About Image">
