--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -87,7 +87,7 @@
                 <div>
                     <input style="height: 50px;width:100%;background-color: transparent;color: white;"  type="email" name="" id="" placeholder="Enter your Email">
                     <center>
-                        <button style="height: 50px;border-radius: 40px;border: none;margin-top: 10px;margin-left: 10px;" class="p-2">Try cryptify</button>
+                        <a href="{% url 'register' %}"><button style="height: 50px;border-radius: 40px;border: none;margin-top: 10px;margin-left: 10px;" class="p-2">Try cryptify</button></a>
                     </center>
                     
                 </div>
