--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -229,7 +229,7 @@
         <section style="color: white;background-color: rgb(53, 53, 53);" class="container-fluid">
             <div class="footer row container">
                 <p class="p-3">cryptify Crypto Buy</p>
-                <p class="p-3">Contact Us: contact@cryptify.online@gmail.com</p>
+                <p class="p-3">Contact Us: cryptify@cryptify.online</p>
                 <!--<p class="p-3">Follow Us: 
                     <a style="color: white;" href="#">Facebook</a> | 
                     <a style="color: white;" href="#">Twitter</a> | 
