--- a/app/templates/cryptify.html
+++ b/app/templates/cryptify.html
@@ -67,7 +67,40 @@
             
         </div>
     </nav>
-    <section style="background-color: black;color: white" class="about-section">
+     <section style="background-color: black;color: white" class="about-section">
+        
+            </div>
+        </div>
+        <br>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Welcome to Cryptify</h2>
+                    <p>Welcome to <strong>Cryptify</strong>, your premier destination for seamless and secure cryptocurrency transactions. In a rapidly evolving digital world, Cryptify stands at the forefront of financial innovation, offering a platform where both novice and experienced crypto enthusiasts can buy and sell cryptocurrencies with ease and confidence.</p>
+
+                    
+                 
+                </div>
+                <div class="col-md-6">
+                    <img src="{% static 'img/cryptify.png' %}" class="img-fluid" alt="About Image">
+                </div> 
+                
+                <div class="container">
+                <br>
+                <br>
+                 <h2>Our Vision</h2>
+                    <p>At Cryptify, we envision a world where financial transactions are as transparent, quick, and borderless as the internet itself. Our mission is to make cryptocurrency accessible to everyone, breaking down the barriers that have traditionally surrounded the world of digital assets. We aim to empower individuals with the knowledge and tools they need to navigate the cryptocurrency landscape, fostering a community of informed and confident users.</p>   
+                </div>
+                  
+            </div>
+        </div>
+    </section>
+    
+    <section style="background-color: black;color: white;" class="about-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="    <section style="background-color: black;color: white" class="about-section">
         
             </div>
         </div>
@@ -94,13 +127,7 @@
                   
             </div>
         </div>
-    </section>
-    
-    <section style="background-color: black;color: white;" class="about-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="{% static '../img/user-research.gif' %}" class="img-fluid" alt="About Image">
+    </section>" class="img-fluid" alt="About Image">
                 </div>
                 <div class="col-md-6">
                     <h2>Why Choose Cryptify?</h2>
