--- a/app/templates/payments/withdraw.html
+++ b/app/templates/payments/withdraw.html
@@ -198,8 +198,10 @@
             'ltc': 0.001,
             'doge': 2,  
             'sol': 0.001,
-            'bnb smartchain': 0.0009,
-            'tron': 5
+            'bnb': 0.0009,
+            'tron': 5,
+            'ton': 0.02,
+            'bch': 0.0003,
             };
     
             var feeDisplay = document.getElementById('feeDisplay');
