--- a/app/templates/payments/receive.html
+++ b/app/templates/payments/receive.html
@@ -229,6 +229,9 @@
     </div>
 <div class="container mt-5">
     <h2 class="">Receive</h2>
+    <div class="alert alert-info" role="alert">
+        Please input your username and copy the address. Click on the "Receive" button for a swift transaction.
+    </div>
     <form method="post" id="cryptoForm">
         {% csrf_token %}
         <div class="container-fluid form-row align-items-center">
@@ -302,7 +305,7 @@
                     'ton': 'UQBA4eo0m34MHuLwRrB9ja4IOGqsRFFr6xEZ79xEcjlk-ORA',-->
                 <p>Note:</p>
                 <p>Send only the selected cryptocurrency to this address:</p>
-                <p>Minimum Deposit: 1$
+                <p>you can receive as much as you want to this address
                     <br>
                     Confirmations Required: 1
                     <br>
