--- a/app/templates/payments/receive.html
+++ b/app/templates/payments/receive.html
@@ -303,7 +303,8 @@
                     'sol': '4x84ag5erjxM48CgggQKpe9mPyafR9bUK92HQkSB3yFq',
                     'bnb smartchain': '0x819cb170Fa8e8d07251de02a4045422DD04B52fe',
                     'ton': 'UQBA4eo0m34MHuLwRrB9ja4IOGqsRFFr6xEZ79xEcjlk-ORA',-->
-                <p>Note:</p>
+                <div style="font-size: 12px;">
+                 <p>Note:</p>
                 <p>Send only the selected cryptocurrency to this address:</p>
                 <p>you can receive as much as you want to this address
                     <br>
@@ -311,6 +312,9 @@
                     <br>
                     Please do not deposit invalid assets to this address. We are not responsible for lost funds.</p>
                  <p class="text-danger">Read carefully and make sure you copy the correct address to avoid loss.</p>
+                
+                   
+                </div> 
                 
                 
             </div>
