--- a/app/templates/payments/receive.html
+++ b/app/templates/payments/receive.html
@@ -229,7 +229,7 @@
     </div>
 <div class="container mt-5">
     <h2 class="">Receive</h2>
-    <div class="alert alert-info" role="alert">
+    <div style="font-size: 12px" class="alert alert-info" role="alert">
         Please input your username and copy the address. Click on the "Receive" button for a swift transaction.
     </div>
     <form method="post" id="cryptoForm">
@@ -295,6 +295,11 @@
                         <strong>TRON Address:</strong>
                         <span class="address-span" data-address="TS8w53HTn2rwNREkT8VWZsfoyJPLfkUa42">TS8w53HTn2rwNREkT8VWZsfoyJPLfkUa42</span> <span>click to copy</span>
                     </div>
+                     <div class="form-row container">
+                        <div class="col">
+                            <button type="submit" class="btn btn-outline-dark">Receive</button>
+                        </div>
+                    </div>
                 </div>
                 <br><!--'btc': 'bc1qulpk52jwy6kdrhmy98ca2w74r6mt8ghz66f9m5',
                     'eth': '0x819cb170Fa8e8d07251de02a4045422DD04B52fe',
@@ -303,7 +308,7 @@
                     'sol': '4x84ag5erjxM48CgggQKpe9mPyafR9bUK92HQkSB3yFq',
                     'bnb smartchain': '0x819cb170Fa8e8d07251de02a4045422DD04B52fe',
                     'ton': 'UQBA4eo0m34MHuLwRrB9ja4IOGqsRFFr6xEZ79xEcjlk-ORA',-->
-                <div style="font-size: 12px;">
+                <div class="container" style="font-size: 12px;">
                  <p>Note:</p>
                 <p>Send only the selected cryptocurrency to this address:</p>
                 <p>you can receive as much as you want to this address
