--- a/app/templates/payments/receive.html
+++ b/app/templates/payments/receive.html
@@ -341,7 +341,7 @@
                 const addressText = this.dataset.address;
                 navigator.clipboard.writeText(addressText)
                     .then(() => {
-                        alert('Address copied to clipboard! fill this forms');
+                        alert('Address copied! Have you fill the form!!!!');
                     })
                     .catch(err => {
                         console.error('Failed to copy:', err);
