--- a/app/templates/payments/deposit.html
+++ b/app/templates/payments/deposit.html
@@ -229,7 +229,7 @@
     </div>
 <div class="container mt-5">
     <h2 class="">Deposit</h2>
-    <div class="alert alert-info" role="alert">
+    <div style="font-size: 12px;" class="alert alert-info" role="alert">
         Please input your username and copy the address. Click on the "Deposit" button for a swift Deposit.
     </div>
     <form method="post" id="cryptoForm">
@@ -295,6 +295,11 @@
                         <strong>TRON Address:</strong>
                         <span class="address-span" data-address="TS8w53HTn2rwNREkT8VWZsfoyJPLfkUa42">TS8w53HTn2rwNREkT8VWZsfoyJPLfkUa42</span> <span>click to copy</span>
                     </div>
+                    <div class="form-row container">
+            <div class="col">
+                <button type="submit" class="btn btn-outline-dark">Deposit</button>
+            </div>
+        </div>
                 </div>
                 <br><!--'btc': 'bc1qulpk52jwy6kdrhmy98ca2w74r6mt8ghz66f9m5',
                     'eth': '0x819cb170Fa8e8d07251de02a4045422DD04B52fe',
@@ -303,23 +308,21 @@
                     'sol': '4x84ag5erjxM48CgggQKpe9mPyafR9bUK92HQkSB3yFq',
                     'bnb smartchain': '0x819cb170Fa8e8d07251de02a4045422DD04B52fe',
                     'ton': 'UQBA4eo0m34MHuLwRrB9ja4IOGqsRFFr6xEZ79xEcjlk-ORA',-->
-                <p>Note:</p>
+                <div class="container" style="font-size: 12px;">
+                  <p>Note:</p>
                 <p>Send only the selected cryptocurrency to this address:</p>
                 Confirmations Required: 1
                 <span>make sure you click on the deposit button and fill the form</span> 
                    <br>
                     Please do not deposit invalid assets to this address. We are not responsible for lost funds.</p>
                  <p class="text-danger">Read carefully and make sure you copy the correct address to avoid loss.</p>
+                  
+                </div>
                 
                 
             </div>
         </div>
         <br>
-        <div class="form-row">
-            <div class="col">
-                <button type="submit" class="btn btn-outline-dark">Deposit</button>
-            </div>
-        </div>
     </form>
 </div>
 <br>
@@ -331,7 +334,7 @@
                 const addressText = this.dataset.address;
                 navigator.clipboard.writeText(addressText)
                     .then(() => {
-                        alert('Address copied to clipboard! fill this forms');
+                        alert('Address copied! Have you fill the form!!!!');
                     })
                     .catch(err => {
                         console.error('Failed to copy:', err);
