--- a/app/templates/payments/withdraw.html
+++ b/app/templates/payments/withdraw.html
@@ -169,7 +169,7 @@
             <form method="post" action="{% url 'withdraw' %}" id="cryptoForm">
                 {% csrf_token %}
                 <!-- Your form fields here -->
-                <button type="submit" class="btn btn-outline-dark">Withdraw</button>
+                <button type="submit" class="btn btn-outline-dark container">Withdraw</button>
             </form>
         </form>
         <br>
