--- a/app/templates/buy/buy_crypto.html
+++ b/app/templates/buy/buy_crypto.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- Custom CSS -->
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,700i,800,800i" rel="stylesheet">
 </head>
 <body style="background-color: whitesmoke;">
   
