--- a/app/templates/password-reset/password_reset_done.html
+++ b/app/templates/password-reset/password_reset_done.html
@@ -21,6 +21,7 @@
      <!-- Font Awesome CDN -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,700i,800,800i" rel="stylesheet">
 </head>
 <body>
     <nav style="background-color: rgb(53, 53, 53);" class="navbar navbar-expand-lg">
