--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -83,7 +83,7 @@
             <div class="col-md-6 "><br>
             <br>
                     <h1 style="font-size: 50px;">Welcome to cryptify</h1>
-                    <h4 class="">Faster, Better, Untrackable</h4>
+                    <h4 class="">Faster, Better, Sleek</h4>
                 <br>
                 <div>
                     <input style="height: 50px;width:100%;background-color: transparent;color: white;"  type="email" name="" id="" placeholder="Enter your Email">
