--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -214,7 +214,7 @@
             <div class="card-header d-flex justify-content-between " id="headingTwo">
                 
                     <button style="color: white;font-size: 30px;text-decoration: none;" class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    <span style="font-size: 20px;">Are Your identities safe</span>
+                    <span style="font-size: 20px;">Your security on cryptify</span>
                     </button>
                 
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" id="plus-icon" class="plus-icon">+</button>
