--- a/app/templates/payments/withdraw.html
+++ b/app/templates/payments/withdraw.html
@@ -171,7 +171,7 @@
                 {% csrf_token %}
                 <div class="container">
                    <!-- Your form fields here -->
-                <button type="submit" class="btn btn-outline-dark container">Withdraw</button>  
+                <button type="submit" class="btn btn-outline-dark">Withdraw</button>  
                 </div>
                
             </form>
